--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,12 +14,12 @@ jobs:
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Node.js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
-                  node-version: 18.18.0
+                  node-version: 20.x
                   cache: 'npm'
 
             - name: Install Dependencies
@@ -49,7 +49,7 @@ jobs:
                   echo "TAG_STATUS=success" >> "$GITHUB_OUTPUT"
 
             - name: Upload To Release
-              uses: softprops/action-gh-release@v0.1.15
+              uses: softprops/action-gh-release@v2
               if: steps.tag.outputs.TAG_STATUS == 'success' && !cancelled()
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
