--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
     "name": "bilibili-live-spamer",
     "private": true,
-    "version": "1.3.12",
+    "version": "1.4.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build && node scripts/minifyUserscript.js",
-        "preview": "vite preview",
-        "lint": "eslint src --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "build": "vite build && node scripts/minifyUserscript.js",
+        "preview": "vue-tsc -b && vite preview",
         "format": "prettier --write src/"
     },
     "dependencies": {
-        "axios": "^1.8.4",
+        "axios": "^1.9.0",
         "lodash": "^4.17.21",
         "mitt": "^3.0.1",
         "naive-ui": "^2.41.0",
@@ -19,17 +18,18 @@
         "vue": "^3.5.13"
     },
     "devDependencies": {
-        "@rushstack/eslint-patch": "^1.11.0",
-        "@vitejs/plugin-vue": "^5.2.3",
+        "@tsconfig/node22": "^22.0.1",
+        "@types/node": "^22.15.2",
+        "@vitejs/plugin-vue": "^5.2.1",
         "@vue/eslint-config-prettier": "^10.2.0",
         "@vue/eslint-config-typescript": "^14.5.0",
         "eslint": "^9.25.1",
-        "eslint-plugin-vue": "^9.32.0",
+        "eslint-plugin-vue": "^10.0.0",
         "prettier": "^3.5.3",
         "terser": "^5.39.0",
-        "typescript": "^5.7.3",
-        "vite": "^6.3.3",
-        "vite-plugin-monkey": "^5.0.8",
-        "vue-tsc": "^2.2.10"
+        "typescript": "^5.7.2",
+        "vite": "^6.0.5",
+        "vite-plugin-monkey": "^5.0.3",
+        "vue-tsc": "^2.2.0"
     }
 }
