--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.1",
+        "@types/lodash": "^4.17.16",
         "@types/node": "^22.15.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vue/eslint-config-prettier": "^10.2.0",
